# metal-project

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp  mtl_engine.hpp  mtl_engine.mm  triangle.metal
